# noirwire-contracts

./: .gitignore  Anchor.toml  Makefile  README.md  deployment-config.json  deployment-config.ts  package-lock.json  package.json  tsconfig.json
programs/noirwire-contracts/: Cargo.toml
programs/noirwire-contracts/src/: lib.rs
programs/zk-pool/: Cargo.toml  README.md
programs/zk-pool/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  verifier.rs
programs/zk-pool/src/instructions/: add_root.rs  initialize.rs  mod.rs  set_paused.rs  set_verification_key.rs  submit_shield.rs  submit_transfer.rs  submit_unshield.rs
scripts/: export-vk.ts  publish-vk.ts  submit-golden.ts
tests/: noirwire-contracts.ts  zk-pool-encoding.spec.ts  zk-pool-unit.spec.ts  zk-pool.spec.ts
zk-circuits/: .gitignore  ABI.md  Makefile  README.md  package-lock.json  package.json
zk-circuits/scripts/: export_vk.js  make_vectors.js  make_vectors_enhanced.js  test_negative.js  verify_build.js
zk-circuits/solana_export/: README.md  all_vks.json  shield_vk.json  shield_vk.rs  shield_vk.ts  transfer_vk.json  transfer_vk.rs  transfer_vk.ts  unshield_vk.json  unshield_vk.rs  unshield_vk.ts
zk-circuits/src/: common.circom  shield.circom  transfer.circom  unshield.circom
zk-circuits/src/merkle/: merkle.circom
zk-circuits/test_vectors/: shield_input.json  transfer_input.json  unshield_input.json
zk-circuits/test_vectors/negative/: README.md  shield_amount_overflow.json  transfer_amount_overflow.json  transfer_fee_exceeds_amount.json  transfer_invalid_root.json  (+3 more)
