[package]
name = "zk-pool"
version = "0.1.0"
description = "Solana Privacy Pool with Groth16 ZK Proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
bytemuck = { version = "1.14", features = ["derive"] }
sha2 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
